media/jellyseer/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - jellyseerr.jg1g.com
      secretName: jellyseerr-tls
  rules:
    - host: jellyseerr.jg1g.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseer-jellyseerr-chart
                port:
                  number: 5055
